Added more stuff - Koch - callsigns - and more stuff :-)

--- a/play.html
+++ b/play.html
@@ -18,10 +18,12 @@
     <script src="app.js"></script>
 </head>
 <body>
-<div id="state"></div>
-<div id="score_board"><span style="display: none" id="correct"></span><span style="display: none" id="cnt"></span> <span id="left"></span> left, <span id="score"></span>p <span style="display: none" id="current"></span></div>
-<div id="wrapper">
+<div id="wrapper" style="text-align: center">
+	<div id="score_board"><span style="display: none" id="correct"></span><span style="display: none" id="cnt"></span> <span id="left"></span> left, <span id="score"></span>p <span style="display: none" id="current"></span></div>
+        <hr>
 	<div id="keyboard"></div>
+        <hr>
+        <div id="about">By Magnus Jonsson/SA2BRJ</div>
 </div>
 </body>
 </html>
