Fixed minor stuff..

--- a/play.html
+++ b/play.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div id="wrapper" style="text-align: center">
-	<div id="score_board"><span style="display: none" id="correct"></span><span style="display: none" id="cnt"></span> <span id="left"></span> left, <span id="score"></span>p <span style="display: none" id="current"></span></div>
+	<div id="score_board"><span style="display: none" id="correct"></span><span style="display: none" id="cnt"></span> <span id="left"></span><span id="score"></span>p <span style="display: none" id="current"></span></div>
         <hr>
 	<div id="keyboard"></div>
         <hr>
