Some cleanup, added about.html.

--- a/about.html
+++ b/about.html
@@ -10,14 +10,22 @@
     <title>Morse Code Learning Game</title>
     <link rel="stylesheet" type="text/css" href="css/mc.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="dist/game.js"></script>
-    <script src="index.js"></script>
 </head>
 <body>
 <div style="text-align: center">
-	<div id="head"><a href="index.html">Morse Code Learning Game</a><br>Select your practice</div>
+	<div id="head"><a href="index.html">Morse Code Learning Game</a></div>
 	<hr>
-	<div id="games"></div>
+	<div id="about_body">
+	<h1>About</h1>
+	<p>This is a simple web/"mobile" "game" to learn morse code.</p>
+	<p>I created this for my own learning. If you find it usefull, use it :-)</p>
+	<p></p>
+	<h1>Info</h1>
+	<p>Currently the speed is fixed at 20wpm (with 10wpm effektive)</p>
+	<p>Pitch at 550Hz</p>
+	<h1>LICENCE</h1>
+	<p>This software are release under the <a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
+	</div>
 	<hr>
 	<div id="about"><a href="about.html">By Magnus Jonsson/SA2BRJ</a></div>
 </div>
