--- a/play.html
+++ b/play.html
@@ -7,7 +7,7 @@
     <meta http-equiv='pragma' content='no-cache'>
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /> 
-    <title>Morse Code Game</title>
+    <title>Morse Code Learning Game</title>
     <link rel="stylesheet" type="text/css" href="css/mc.css">
     <link rel="stylesheet" type="text/css" href="/virtual_keyboard/css/keyboard.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -23,7 +23,7 @@
         <hr>
 	<div id="keyboard"></div>
         <hr>
-        <div id="about">By Magnus Jonsson/SA2BRJ</div>
+        <div id="about"><a href="about.html">By Magnus Jonsson/SA2BRJ</a></div>
 </div>
 </body>
 </html>
