Added options for pitch, wpm, fwpm and length of play.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,42 @@
 <div style="text-align: center">
 	<div id="head"><a href="index.html">Morse Code Learning Game</a><br>Select your practice</div>
 	<hr>
+	Pitch <select name="pitch">
+		<option value="400">400Hz</option>
+		<option value="450">450Hz</option>
+		<option value="500">500Hz</option>
+		<option value="550" selected>550Hz</option>
+		<option value="600">600Hz</option>
+	</select>
+	Count <select name="count">
+		<option value="10">10</option>
+		<option value="20">20</option>
+		<option value="50">50</option>
+		<option value="100">100</option>
+		<option value="200">200</option>
+	</select>
+	WPM <select name="wpm">
+		<option value="10">10</option>
+		<option value="12">12</option>
+		<option value="15">15</option>
+		<option value="17">17</option>
+		<option value="20" selected>20</option>
+		<option value="22">22</option>
+		<option value="25">25</option>
+		<option value="27">27</option>
+		<option value="30">30</option>
+	</select>
+	Farnsworth WPM <select name="fwpm">
+		<option value="10" selected>10</option>
+		<option value="12">12</option>
+		<option value="15">15</option>
+		<option value="17">17</option>
+		<option value="20">20</option>
+		<option value="22">22</option>
+		<option value="25">25</option>
+		<option value="27">27</option>
+		<option value="30">30</option>
+	</select>
 	<div id="games"></div>
 	<hr>
 	<div id="about"><a href="about.html">By Magnus Jonsson/SA2BRJ</a></div>
