removed old information. Added information about github.

--- a/about.html
+++ b/about.html
@@ -19,12 +19,10 @@
 	<h1>About</h1>
 	<p>This is a simple web/"mobile" "game" to learn morse code.</p>
 	<p>I created this for my own learning. If you find it usefull, use it :-)</p>
-	<p></p>
-	<h1>Info</h1>
-	<p>Currently the speed is fixed at 20wpm (with 10wpm effektive)</p>
-	<p>Pitch at 550Hz</p>
 	<h1>LICENCE</h1>
 	<p>This software are release under the <a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
+	<h1>Source Code</h1>
+	<p>The source code is available at my github page: <a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
 	</div>
 	<hr>
 	<div id="about"><a href="about.html">By Magnus Jonsson/SA2BRJ</a></div>
