Changed about to a modal Dialog. Added .htaccess for dev with no cache.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <html>
 <head>
-    <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='pragma' content='no-cache'>
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /> 
     <title>Morse Code Learning Game</title>
@@ -55,7 +52,28 @@
 	</select>
 	<div id="games"></div>
 	<hr>
-	<div id="about"><a href="about.html">By Magnus Jonsson/SA2BRJ</a></div>
+	<div id="about"><a href="#aboutDialog">By Magnus Jonsson/SA2BRJ</a></div>
+
 </div>
+
+<div id="aboutDialog" class="modalDialog">
+	<div>
+		<a href="#close" title="Close" class="close">X</a>
+		<h1>About</h1>
+		<p>This is a simple web/"mobile" "game" to learn morse code.</p>
+		<p>I created this for my own learning. If you find it usefull, use it :-)</p>
+		<h2>LICENCE</h2>
+		<p>This software are release under the <a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
+		<h2>Source Code</h2>
+		<p>The source code is available at my github page: <a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
+	</div>
+</div>
+
+</body>
+</html>
+
+	</div>
+</div>
+
 </body>
 </html>
