Fixed about dialog, added cw_key "logo"

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <div style="text-align: center">
+	<div id="home" style="float:left"><a href="index.html"><img id="cw_key" src="image/cw_key.small.png" alt="CW_KEY"/></a></div>
 	<div id="head"><a href="index.html">Morse Code Learning Game</a><br>Select your practice</div>
 	<hr>
 	Pitch <select name="pitch">
@@ -52,20 +53,22 @@
 	</select>
 	<div id="games"></div>
 	<hr>
-	<div id="about"><a href="#aboutDialog">By Magnus Jonsson/SA2BRJ</a></div>
+	<div id="about"><a href="#aboutDialog">About</a> - By Magnus Jonsson/SA2BRJ</div>
 
 </div>
 
 <div id="aboutDialog" class="modalDialog">
-	<div>
+	<div class="center">
 		<a href="#close" title="Close" class="close">X</a>
 		<h1>About</h1>
 		<p>This is a simple web/"mobile" "game" to learn morse code.</p>
 		<p>I created this for my own learning. If you find it usefull, use it :-)</p>
 		<h2>LICENCE</h2>
-		<p>This software are release under the <a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
+		<p>This software are release under the<br><a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
 		<h2>Source Code</h2>
-		<p>The source code is available at my github page: <a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
+		<p>The source code is available at my github page:<br><a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
+		<h2>Cookies</h2>
+		<p>No cookies are used</p>
 	</div>
 </div>
 
