Fixed bad html. TNX sa2kng.

--- a/play.html
+++ b/play.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-<html>
 <head>
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /> 
@@ -39,7 +38,7 @@
                 <h1>Score</h1>
 		<div class="center">
 		<p>Correct answers: <span class="correct"></span> (<span class="correct_percent"></span>%)<p>
-		<p>Score: <span class="score"></span> (lower is better)</span><p>
+		<p>Score: <span class="score"></span> (lower is better)<p>
 		</div>
 	</div>
 </div>
