Updated documentation with keyboard information.

--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@
 <div id="aboutDialog" class="modalDialog">
 	<div class="center">
 		<a href="#close" title="Close" class="close">X</a>
+		<div>
 		<h1>About</h1>
 		<p>This is a simple web/"mobile" "game" to learn morse code.</p>
 		<p>I created this for my own learning. If you find it usefull, use it :-)</p>
+		<h2>Keyboard</h2>
+		<p>Real keyboard can be used instead for pushing the virtual keyboard.</p>
+		<p>Enter/Space can be used to push the start button.</p>
+		<p>Enter/Space can be used to push the start button.</p>
+		<p>Esc can be used to abort game and leave game.</p>
+		<p></p>
 		<h2>LICENCE</h2>
 		<p>This software are release under the<br><a href="LICENSE">GNU AFFERO GENERAL PUBLIC LICENSE Version 3</a></p>
 		<h2>Source Code</h2>
 		<p>The source code is available at my github page:<br><a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
 		<h2>Cookies</h2>
 		<p>No cookies are used</p>
+		</div>
 	</div>
 </div>
 </body>
