Updated information about cookies.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 		<h2>Source Code</h2>
 		<p>The source code is available at my github page:<br><a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
 		<h2>Cookies</h2>
-		<p>No cookies are used</p>
+		<p>Cookies are used to save configuration and you progress.</p>
+		<p>Active ACCEPT needed before first save.</p>
 		</div>
 	</div>
 </div>
