Changed how modes are grouped.

--- a/play.html
+++ b/play.html
@@ -39,7 +39,7 @@
 		<div class="center">
 		<p>Correct answers: <span class="correct"></span> (<span class="correct_percent"></span>%)<p>
 		<p>Score: <span class="score"></span> (lower is better)<p>
-		<p id="gamecfg"><span class="game"></span><br/>count: <span class="count"></span>, wpm: <span class="wpm"></span> (<span class="wpm"></span>)<p>
+		<p id="gamecfg"><span class="pgame"></span> - <span class="game"></span><br/>count: <span class="count"></span>, wpm: <span class="wpm"></span> (<span class="wpm"></span>)<p>
 		</div>
 	</div>
 </div>
