link to cookie accept.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<p>The source code is available at my github page:<br><a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
 		<h2>Cookies</h2>
 		<p>Cookies are used to save configuration and you progress.</p>
-		<p>Active ACCEPT needed before first save.</p>
+		<p>Active <a href="#cookieDialog">ACCEPT</a> needed before first save.</p>
 		</div>
 	</div>
 </div>
