--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="js/jquery.animate-colors-min.js"></script>
     <script src="js/js.cookie.js"></script>
-    <script src="dist/game.js"></script>
-    <script src="index.js"></script>
+    <script src="dist/index.js"></script>
 </head>
 <body>
 <div style="text-align: center">
