--- a/play.html
+++ b/play.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /> 
     <title>Morse Code Learning Game</title>
-    <link rel="stylesheet" type="text/css" href="css/mc.css">
     <link rel="stylesheet" type="text/css" href="/virtual_keyboard/css/keyboard.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="js/jquery.animate-colors-min.js"></script>
-    <script src="js/js.cookie.js"></script>
-    <script src="/morse_code_player/morse_code_player.js"></script>
-    <script src="/virtual_keyboard/keyboard.js"></script>
-    <script src="dist/game.js"></script>
-    <script src="app.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/mc.css">
+    <script src="dist/play.js"></script>
 </head>
 <body>
 <div id="wrapper" style="text-align: center">
