--- a/play.html
+++ b/play.html
@@ -20,7 +20,7 @@
 
 <div id="startDialog" class="modalDialog">
         <div>
-		<a href="index.html" title="Close" class="close">X</a>
+		<a href="." title="Close" class="close">X</a>
                 <h1>Push start to start</h1>
 		<p>&nbsp;</p>
 		<div class="center"><button id="startButton">Start</button></div>
@@ -29,7 +29,7 @@
 
 <div id="scoreBoard" class="modalDialog">
         <div>
-		<a href="#startDialog" title="Close" class="close">X</a>
+		<a id="scoreBoardClose" href="#scoreBoard" title="Close" class="close">X</a>
 		<div class="center">
                 <h1>Score</h1>
 		<p>Correct answers: <span class="correct"></span> (<span class="correct_percent"></span>%)<br>
