wrong right wpm in score board.

--- a/play.html
+++ b/play.html
@@ -36,7 +36,7 @@
 		<p>Correct answers: <span class="correct"></span> (<span class="correct_percent"></span>%)<br>
 		Score: <span class="score"></span><br>
 		<span class="comment"></span></p>
-		<p id="gamecfg"><span class="pgame"></span> - <span class="game"></span><br/>count: <span class="count"></span>, wpm: <span class="wpm"></span> (<span class="wpm"></span>)<p>
+		<p id="gamecfg"><span class="pgame"></span> - <span class="game"></span><br/>count: <span class="count"></span>, wpm: <span class="wpm"></span> (<span class="fwpm"></span>)<p>
 		</div>
 	</div>
 </div>
