Adds stop key/icon.

--- a/play.html
+++ b/play.html
@@ -11,7 +11,8 @@
 <body>
 <div id="wrapper" style="text-align: center">
 	<div id="home" style="float:left"><a href="index.html"><img id="cw_key" src="image/cw_key.small.png" alt="CW_KEY"/></a></div>
-	<div id="settings" style="width: 5vw; float:right"><span class="volume"></span>%</div>
+	<div id="settings" style="width: 5vw; float:left"><span class="volume"></span>%</div>
+	<div id="esc" style="float:right"><img id="stop_sign" src="image/Stop_sign.small.png" alt="StopSign"/></div>
 	<div id="score_board"><span style="display: none" class="correct"></span><span style="display: none" class="items_cnt"></span> <span class="items_left"></span><span class="score">0.00</span>p <span style="display: none" class="current"></span></div>
         <hr>
 	<div id="keyboard"></div>
