Minor change in cookie about.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<h2>Source Code</h2>
 		<p>The source code is available at my github page:<br><a href="https://github.com/kmjonsson/morse_code_game">https://github.com/kmjonsson/morse_code_game</a></p>
 		<h2>Cookies</h2>
-		<p>Cookies are used to save configuration and you progress.</p>
+		<p>Cookies are used to save configuration and you progress if and only if you accept that cookes are used.</p>
 		<p>Active <a class="dialog" href="#cookieDialog">ACCEPT</a> needed before first save.</p>
 		</div>
 	</div>
