Adds more freq's

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		<option value="500">500Hz</option>
 		<option value="550" selected>550Hz</option>
 		<option value="600">600Hz</option>
+		<option value="600">650Hz</option>
+		<option value="600">700Hz</option>
+		<option value="600">750Hz</option>
+		<option value="600">800Hz</option>
 	</select>
 	Count <select name="count">
 		<option value="10">10</option>
