Adds custom repeat feature.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
 		<option value="27">27</option>
 		<option value="30">30</option>
 	</select>
+	Repeat delay <select name="repeat">
+		<option value="0">off</option>
+		<option value="1">1</option>
+		<option value="2" selected>2</option>
+		<option value="3">3</option>
+		<option value="4">4</option>
+	</select>
 	<button id="save">save</button>
 	<div id="games"></div>
 	<hr>
