Your browser does not support JavaScript!

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<option value="4">4</option>
 	</select>
 	<button id="save">save</button>
+        <noscript><h1>Your browser does not support JavaScript!</h1></noscript>
 	<div id="games"></div>
 	<hr>
 	<div id="about"><a class="dialog" href="#aboutDialog">About</a> - By Magnus Jonsson/SA2BRJ</div>
