--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 		<option value="3">3</option>
 		<option value="4">4</option>
 	</select>
+	Group count <select name="gcount">
+		<option value="1" selected>1</option>
+		<option value="2">2</option>
+		<option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
+	</select>
 	<button id="save">save</button>
         <noscript><h1>Your browser does not support JavaScript!</h1></noscript>
 	<div id="games"></div>
