--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		<option value="3">3</option>
 		<option value="4">4</option>
 		<option value="5">5</option>
+		<option value="-2">Random max 2</option>
+		<option value="-3">Random max 3</option>
+		<option value="-4">Random max 4</option>
+		<option value="-5">Random max 5</option>
 	</select>
 	<button id="save">save</button>
         <noscript><h1>Your browser does not support JavaScript!</h1></noscript>
