--- a/index.html
+++ b/index.html
@@ -12,65 +12,7 @@
 	<div id="home" style="float:left"><a href="index.html"><img id="cw_key" src="image/cw_key.small.png" alt="CW_KEY"/></a></div>
 	<div id="head"><a href="index.html">Morse Code Learning Game</a><br>Select your practice</div>
 	<hr>
-	Pitch <select name="pitch">
-		<option value="400">400Hz</option>
-		<option value="450">450Hz</option>
-		<option value="500">500Hz</option>
-		<option value="550" selected>550Hz</option>
-		<option value="600">600Hz</option>
-		<option value="600">650Hz</option>
-		<option value="600">700Hz</option>
-		<option value="600">750Hz</option>
-		<option value="600">800Hz</option>
-	</select>
-	Count <select name="count">
-		<option value="10">10</option>
-		<option value="20">20</option>
-		<option value="50">50</option>
-		<option value="100">100</option>
-		<option value="200">200</option>
-	</select>
-	WPM <select name="wpm">
-		<option value="10">10</option>
-		<option value="12">12</option>
-		<option value="15">15</option>
-		<option value="17">17</option>
-		<option value="20" selected>20</option>
-		<option value="22">22</option>
-		<option value="25">25</option>
-		<option value="27">27</option>
-		<option value="30">30</option>
-	</select>
-	Farnsworth WPM <select name="fwpm">
-		<option value="10" selected>10</option>
-		<option value="12">12</option>
-		<option value="15">15</option>
-		<option value="17">17</option>
-		<option value="20">20</option>
-		<option value="22">22</option>
-		<option value="25">25</option>
-		<option value="27">27</option>
-		<option value="30">30</option>
-	</select>
-	Repeat delay <select name="repeat">
-		<option value="0">off</option>
-		<option value="1">1</option>
-		<option value="2" selected>2</option>
-		<option value="3">3</option>
-		<option value="4">4</option>
-	</select>
-	Group count <select name="gcount">
-		<option value="1" selected>1</option>
-		<option value="2">2</option>
-		<option value="3">3</option>
-		<option value="4">4</option>
-		<option value="5">5</option>
-		<option value="-2">Random max 2</option>
-		<option value="-3">Random max 3</option>
-		<option value="-4">Random max 4</option>
-		<option value="-5">Random max 5</option>
-	</select>
-	<button id="save">save</button>
+	<button class="dialog" id="setup" target="#setupDialog">Setup</button>
         <noscript><h1>Your browser does not support JavaScript!</h1></noscript>
 	<div id="games"></div>
 	<hr>
@@ -101,7 +43,76 @@
 		</div>
 	</div>
 </div>
-
+<div id="setupDialog" class="modalDialog">
+	<div class="center" style="line-height: 225%;">
+		<a href="#aboutDialog" title="Close" class="close">X</a>
+		Pitch <select name="pitch">
+			<option value="400">400Hz</option>
+			<option value="450">450Hz</option>
+			<option value="500">500Hz</option>
+			<option value="550" selected>550Hz</option>
+			<option value="600">600Hz</option>
+			<option value="600">650Hz</option>
+			<option value="600">700Hz</option>
+			<option value="600">750Hz</option>
+			<option value="600">800Hz</option>
+		</select>
+		(random<input type="checkbox" id="randomPitch"> +/-100Hz)
+		<br>
+		Count <select name="count">
+			<option value="10">10</option>
+			<option value="20">20</option>
+			<option value="50">50</option>
+			<option value="100">100</option>
+			<option value="200">200</option>
+		</select>
+		<br>
+		WPM <select name="wpm">
+			<option value="10">10</option>
+			<option value="12">12</option>
+			<option value="15">15</option>
+			<option value="17">17</option>
+			<option value="20" selected>20</option>
+			<option value="22">22</option>
+			<option value="25">25</option>
+			<option value="27">27</option>
+			<option value="30">30</option>
+		</select>
+		<br>
+		Farnsworth WPM <select name="fwpm">
+			<option value="10" selected>10</option>
+			<option value="12">12</option>
+			<option value="15">15</option>
+			<option value="17">17</option>
+			<option value="20">20</option>
+			<option value="22">22</option>
+			<option value="25">25</option>
+			<option value="27">27</option>
+			<option value="30">30</option>
+		</select>
+		<br>
+		Repeat delay <select name="repeat">
+			<option value="0">off</option>
+			<option value="1">1</option>
+			<option value="2" selected>2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+		</select>
+		<br>
+		Group count <select name="gcount">
+			<option value="1" selected>1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+		</select>
+		(random<input type="checkbox" id="randomGCount">)
+		<br>
+		Increase wpm on correct answer: <input type="checkbox" id="incdec">
+		<hr>
+		<button id="save">save</button>
+	</div>
+</div>
 <div id="cookieDialog" class="modalDialog">
 	<div class="center">
 		<a href="#cookieDialog" title="Close" class="close">X</a>
